--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,15 @@
+
 {
-    "version": 2,
-    "builds": [
-      {
+    "builds": [{
         "src": "TODO/wsgi.py",
-        "use": "@vercel/python"
-      }
-    ],
+        "use": "@vercel/python",
+        "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
+    }],
     "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "TODO/wsgi.py"
-      }
+        {
+            "src": "/(.*)",
+            "dest": "TODO/wsgi.py"
+        }
     ]
-  }
+}
   
